--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Connect 4!</h1>
+    <h1>Connect 4</h1>
+    <main>
+      <section id="info-bar">
+        <div>Current Turn:<span>///</span></div>
+        <div id="score-container">
+          <div>Player 1 Wins: <span>///</span></div>
+          <div>Player 2 Wins: <span>///</span></div>
+        </div>
+        <button id="btn-how-to-play">How to Play</button>
+        <button id="btn-reset-game">Reset Game</button>
+      </section>
+    </main>
   </body>
 </html>
