--- a/index.html
+++ b/index.html
@@ -11,28 +11,55 @@
   <body>
     <h1>Connect 4</h1>
     <main>
-      <section id="modal" class="">
+      <section id="modal" class="visible">
         <div id="modal-content">
           <h2 class="modal-header"></h2>
           <div id="player-settings-container">
             <div id="player-one-settings" class="player-input">
-              <p>Player 1:</p>
+              <h2>Player 1:</h2>
               <form action="">
-                <input type="text" placeholder="Input Username" />
+                <input
+                  class="input-username"
+                  value=""
+                  type="text"
+                  placeholder="Input Username"
+                />
+                <input type="button" value="submit" />
                 <input type="color" value="#FFFF00" />
               </form>
             </div>
             <div id="player-two-settings" class="player-input">
-              <p>Player 2:</p>
+              <h2>Player 2:</h2>
               <form action="">
-                <input type="text" placeholder="Input Username" />
+                <input
+                  class="input-username"
+                  value=""
+                  type="text"
+                  placeholder="Input Username"
+                />
                 <input type="color" value="#ff0000" />
               </form>
             </div>
           </div>
+          <h2>Choose a desired grid size:</h2>
+          <div class="grid-size-container">
+            <div class="grid-size-row">
+              <button>6x7 (default)</button>
+              <button>8x7</button>
+            </div>
+            <div class="grid-size-row">
+              <button>5x4</button>
+              <button>9x7</button>
+            </div>
+            <div class="grid-size-row">
+              <button>6x5</button>
+              <button>10x7</button>
+            </div>
           </div>
-          <p class="modal-text">modal text content</p>
-          <button class="btn-close-modal">Close</button>
+          <div class="modal-buttons-container">
+            <button class="btn-rules">Rules</button>
+            <button class="btn-start-game">Start Game</button>
+          </div>
         </div>
       </section>
       <section id="info-bar">
@@ -41,8 +68,8 @@
           <div>Player 1 Wins: <span>///</span></div>
           <div>Player 2 Wins: <span>///</span></div>
         </div>
-        <button id="btn-how-to-play">How to Play</button>
-        <button id="btn-reset-game">Reset Game</button>
+        <button class="btn-rules">Rules</button>
+        <button class="btn-reset-game">Reset Game</button>
       </section>
       <section id="grid-container">
         <!-- grid goes here -->
