--- a/index.html
+++ b/index.html
@@ -45,20 +45,19 @@
           <h2>Choose a desired grid size:</h2>
           <div class="grid-size-container">
             <div class="grid-size-row">
-              <button>6x7 (default)</button>
-              <button>8x7</button>
+              <button class="btn-grid-choice">6x7</button>
+              <button class="btn-grid-choice">8x7</button>
             </div>
             <div class="grid-size-row">
-              <button>5x4</button>
-              <button>9x7</button>
+              <button class="btn-grid-choice">5x4</button>
+              <button class="btn-grid-choice">9x7</button>
             </div>
             <div class="grid-size-row">
-              <button>6x5</button>
-              <button>10x7</button>
+              <button class="btn-grid-choice">6x5</button>
+              <button class="btn-grid-choice">10x7</button>
             </div>
           </div>
           <div class="modal-buttons-container">
-            <button class="btn-rules">Rules</button>
             <button class="btn-start-game">Start Game</button>
           </div>
         </div>
@@ -66,8 +65,14 @@
       <section id="info-bar">
         <div>Current Turn:<span>///</span></div>
         <div id="score-container">
-          <div>Player 1 Wins: <span>///</span></div>
-          <div>Player 2 Wins: <span>///</span></div>
+          <div>
+            <span class="display-username1">Player 1</span> wins:
+            <span>///</span>
+          </div>
+          <div>
+            <span class="display-username2">Player 2</span> wins:
+            <span>///</span>
+          </div>
         </div>
         <button class="btn-rules">Rules</button>
         <button class="btn-reset-game">Reset Game</button>
