added TODO tags and cleaned up some readability.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </section>
       <section id="info-bar">
-        <div>Current Turn:<span>///</span></div>
+        <div class="active-player">Current Turn:<span></span></div>
         <div id="score-container">
           <div>
             <span class="display-username1">Player 1</span> wins:
