grid positions added to buttons, linking 2d array and gameboard

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         <div id="score-container">
           <div>
             <span class="display-username1">Player 1</span> wins:
-            <span>///</span>
+            <span></span>
           </div>
           <div>
             <span class="display-username2">Player 2</span> wins:
-            <span>///</span>
+            <span></span>
           </div>
         </div>
         <button class="btn-rules">Rules</button>
