when a player wins, column styling will be reset to default and gameboard event listeners are removed

--- a/index.html
+++ b/index.html
@@ -86,15 +86,13 @@
         <div>Current Turn: <span class="active-player"></span></div>
         <div role="scoreboard" id="score-container">
           <div role="player 1 score">
-            <span class="display-username1">Player 1</span> wins:
-            <span></span>
+            <span class="display-username1">Player 1</span>:
+            <span>0</span>
           </div>
           <div>
-            <span role="player 2 score" class="display-username2"
-              >Player 2</span
-            >
-            wins:
-            <span></span>
+            <span role="player 2 score" class="display-username2">Player 2</span
+            >:
+            <span>0</span>
           </div>
         </div>
         <button class="btn-rules">Rules</button>
