win modal implemented and reset button functionality added

--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
         <button class="btn-rules">Rules</button>
         <button class="btn-reset-game">Reset Game</button>
       </section>
+      <section id="results-banner" class="hidden">
+        <h2 class="results-header"></h2>
+        <button class="btn-play-again">Play again!</button>
+      </section>
       <section role="gameboard container" id="grid-container">
         <!-- grid goes here -->
       </section>
