play again button functionality implemented

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
         <div role="scoreboard" id="score-container">
           <div role="player 1 score">
             <span class="display-username1">Player 1</span>:
-            <span>0</span>
+            <span class="display-score-1">0</span>
           </div>
           <div>
             <span role="player 2 score" class="display-username2">Player 2</span
             >:
-            <span>0</span>
+            <span class="display-score-2">0</span>
           </div>
         </div>
         <button class="btn-rules">Rules</button>
