--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
         <h2 class="results-header"></h2>
         <button class="btn-play-again">Play again!</button>
       </section>
+      <section id="rules-modal" class="hidden">
+        <h2>How to Play:</h2>
+        <p>
+          To win Connect Four, you must get four of your chips in a row. These
+          four can be horizontal, vertical, or diagonal. <br />
+          On your turn you will select a column and your chip will fall to the
+          lowest available space.
+        </p>
+        <button class="btn-rules">Close</button>
+      </section>
       <section role="gameboard container" id="grid-container">
         <!-- grid goes here -->
       </section>
