sunrise color palette added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <input
                   class="color-player1 color-player"
                   type="color"
-                  value="#FFFF00"
+                  value="#FFB401"
                 />
                 <br />
                 <div class="button-container">
@@ -65,7 +65,7 @@
                 <input
                   class="color-player2 color-player"
                   type="color"
-                  value="#ff0000"
+                  value="#B70B0D"
                 />
                 <br />
                 <input
@@ -129,7 +129,9 @@
         <h2>How to Play:</h2>
         <p>
           To win Connect Four, you must get four of your chips in a row. These
-          four can be horizontal, vertical, or diagonal. <br />
+          four can be horizontal, vertical, or diagonal.
+        </p>
+        <p>
           On your turn you will select a column and your chip will fall to the
           lowest available space.
         </p>
