all colors and styles set

--- a/index.html
+++ b/index.html
@@ -122,8 +122,10 @@
         <button class="btn-reset-game">Reset Game</button>
       </section>
       <section id="results-banner" class="hidden">
-        <h2 class="results-header"></h2>
-        <button class="btn-play-again">Play again!</button>
+        <div id="results-content">
+          <h2 class="results-header"></h2>
+          <button class="btn-play-again">Play again!</button>
+        </div>
       </section>
       <section id="rules-modal" class="hidden">
         <h2>How to Play:</h2>
